fixed the paths for html files but not style problem in page Articles

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
     integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
   <link rel="stylesheet" href="/fonts/fontawesome-free-5.10.2-web/css/all.css">
-  <link href="/css/Xische.com.css" rel="stylesheet">
+  <link href="css/Xische.com.css" rel="stylesheet">
 </head>
 
 <body>
@@ -19,16 +19,16 @@
       <p class="text">where are you going next&#63;</p>
       <ul class="agencies-nav list-unstyled">
         <li class="logo" id="logo" onmouseover="showParagraph('par1')" onmouseout="hideParagraph('par1')">
-          <a href="#"><img src="/images/xische.com-images/logo01.svg" class="logo-image"></a>
+          <a href="#"><img src="images/xische.com-images/logo01.svg" class="logo-image"></a>
         </li>
         <li class="logo" onmouseover="showParagraph('par2')" onmouseout="hideParagraph('par2')" >
-          <a href="#"><img src="/images/xische.com-images/logo02.svg" class="logo-image"></a>
+          <a href="#"><img src="images/xische.com-images/logo02.svg" class="logo-image"></a>
         </li>
         <li class="logo" onmouseover="showParagraph('par3')" onmouseout="hideParagraph('par3')">
-            <a href="#"><img src="/images/xische.com-images/logo03.svg" class="logo-image"></a>
+            <a href="#"><img src="images/xische.com-images/logo03.svg" class="logo-image"></a>
         </li>
         <li class="logo" onmouseover="showParagraph('par4')" onmouseout="hideParagraph('par4')">
-            <a href="#"><img src="/images/xische.com-images/logo04.svg" class="logo-image"></a>
+            <a href="#"><img src="images/xische.com-images/logo04.svg" class="logo-image"></a>
         </li>
       </ul>
       <div class="paragraph1 d-hidden" id="par1" >
