--- a/Contact.html
+++ b/Contact.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
     integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
   <link rel="stylesheet" href="/fonts/fontawesome-free-5.10.2-web/css/all.css">
-  <link href="/css/Contact.css" rel="stylesheet">
+  <link href="css/Contact.css" rel="stylesheet">
 </head>
 
 <body>
@@ -17,7 +17,7 @@
     <nav class="navbar navbar-expand-lg">
       <div class="header-logo">
         <a class="navbar-logo-link" href="/html/Home.html">
-          <img src="/images/reports-images/header-logo.png" class="navbar-logo-img">
+          <img src="images/reports-images/header-logo.png" class="navbar-logo-img">
         </a>
       </div>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#myNavBar"
@@ -27,28 +27,28 @@
       <div class="collapse navbar-collapse col-md-6" id="websiteNav">
             <ul class="navbar-nav offset-lg-7" id="navbar">
               <li class="page">
-                <a class="nav-link" href="/Home.html">home</a>
+                <a class="nav-link" href="Home.html">home</a>
               </li>
               <li class="page">
-                <a class="nav-link" href="/Projects.html">projects</a>
+                <a class="nav-link" href="Projects.html">projects</a>
               </li>
               <li class="page">
-                <a class="nav-link" href="/Reports.html">reports</a>
+                <a class="nav-link" href="Reports.html">reports</a>
               </li>
               <li class="page">
-                <a class="nav-link" href="/Articles.html">articles</a>
+                <a class="nav-link" href="Articles.html">articles</a>
               </li>
               <li class="page">
-                <a class="nav-link" href="/Emails.html">emails</a>
+                <a class="nav-link" href="Emails.html">emails</a>
               </li>
               <li class="page">
-                <a class="nav-link" href="/About.html">about</a>
+                <a class="nav-link" href="About.html">about</a>
               </li>
               <li class="page">
-                <a class="nav-link" href="/Contact.html">contact</a>
+                <a class="nav-link" href="Contact.html">contact</a>
               </li>
               <li class="page">
-                <a class="nav-link" href="/index.html">xische&#46;com</a>
+                <a class="nav-link" href="index.html">xische&#46;com</a>
               </li>
             </ul>
           </div>
