--- a/Emails.html
+++ b/Emails.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
     integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
   <link rel="stylesheet" href="/fonts/fontawesome-free-5.10.2-web/css/all.css">
-  <link href="/css/Emails.css" rel="stylesheet">
+  <link href="css/Emails.css" rel="stylesheet">
 </head>
 
 <body>
@@ -17,7 +17,7 @@
     <nav class="navbar navbar-expand-lg">
       <div class="header-logo">
         <a class="navbar-logo-link" href="/html/Home.html">
-          <img src="/images/reports-images/header-logo.png" class="navbar-logo-img">
+          <img src="images/reports-images/header-logo.png" class="navbar-logo-img">
         </a>
       </div>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#myNavBar"
@@ -27,28 +27,28 @@
       <div class="collapse navbar-collapse col-md-6" id="websiteNav">
             <ul class="navbar-nav offset-lg-7" id="navbar">
               <li class="page">
-                <a class="nav-link" href="/Home.html">home</a>
+                <a class="nav-link" href="Home.html">home</a>
               </li>
               <li class="page">
-                <a class="nav-link" href="/Projects.html">projects</a>
+                <a class="nav-link" href="Projects.html">projects</a>
               </li>
               <li class="page">
-                <a class="nav-link" href="/Reports.html">reports</a>
+                <a class="nav-link" href="Reports.html">reports</a>
               </li>
               <li class="page">
-                <a class="nav-link" href="/Articles.html">articles</a>
+                <a class="nav-link" href="Articles.html">articles</a>
               </li>
               <li class="page">
-                <a class="nav-link" href="/Emails.html">emails</a>
+                <a class="nav-link" href="Emails.html">emails</a>
               </li>
               <li class="page">
-                <a class="nav-link" href="/About.html">about</a>
+                <a class="nav-link" href="About.html">about</a>
               </li>
               <li class="page">
-                <a class="nav-link" href="/Contact.html">contact</a>
+                <a class="nav-link" href="Contact.html">contact</a>
               </li>
               <li class="page">
-                <a class="nav-link" href="/index.html">xische&#46;com</a>
+                <a class="nav-link" href="index.html">xische&#46;com</a>
               </li>
             </ul>
           </div>
@@ -58,7 +58,7 @@
     <div class="empty1"></div>
     <div class="backstory-login">
       <div class="logo">
-        <img src="/images/email-images/backstory-image.png" class="backstory-image">
+        <img src="images/email-images/backstory-image.png" class="backstory-image">
       </div>
       <p class="backstory-paragraph">
         <strong>A weekly digest to get you up to speed on the backstories behind the biggest global shifts &#45; in
@@ -79,7 +79,7 @@
     </div>
     <div class="sub-issues d-flex justify-content-space-between">
       <div class="issue">
-        <img src="/images/email-images/issue-image.jpg" class="issue-image">
+        <img src="images/email-images/issue-image.jpg" class="issue-image">
         <div class="issue-title">
           <a class="issue-title-link">Issue 22&#58; Your Blockchain is Full</a>
         </div>
@@ -87,7 +87,7 @@
         <a href="#" title="read more" class="read-more">Read More →</a>
       </div>
       <div class="issue">
-        <img src="/images/email-images/issue-image.jpg" class="issue-image">
+        <img src="images/email-images/issue-image.jpg" class="issue-image">
         <div class="issue-title">
           <a class="issue-title-link">Issue 21&#58; The Bank in Your Pocket</a>
         </div>
@@ -95,7 +95,7 @@
         <a href="#" title="read more" class="read-more">Read More →</a>
       </div>
       <div class="issue">
-        <img src="/images/email-images/issue-image.jpg" class="issue-image">
+        <img src="images/email-images/issue-image.jpg" class="issue-image">
         <div class="issue-title">
           <a class="issue-title-link">Issue 20&#58; Taking Stock</a>
         </div>
@@ -103,7 +103,7 @@
         <a href="#" title="read more" class="read-more">Read More →</a>
       </div>
       <div class="issue">
-        <img src="/images/email-images/issue-image.jpg" class="issue-image">
+        <img src="images/email-images/issue-image.jpg" class="issue-image">
         <div class="issue-title">
           <a class="issue-title-link">Issue 19&#58; Innovating Beyond Email</a>
         </div>
@@ -113,7 +113,7 @@
     </div>
     <div class="sub-issues d-flex justify-content-space-between">
       <div class="issue">
-        <img src="/images/email-images/issue-image.jpg" class="issue-image">
+        <img src="images/email-images/issue-image.jpg" class="issue-image">
         <div class="issue-title">
           <a class="issue-title-link">Issue 18&#58; Happy Technology</a>
         </div>
@@ -121,7 +121,7 @@
         <a href="#" title="read more" class="read-more">Read More →</a>
       </div>
       <div class="issue">
-        <img src="/images/email-images/issue-image.jpg" class="issue-image">
+        <img src="images/email-images/issue-image.jpg" class="issue-image">
         <div class="issue-title">
           <a class="issue-title-link">Issue 17&#58; Innovation Through Collaboration</a>
         </div>
@@ -129,7 +129,7 @@
         <a href="#" title="read more" class="read-more">Read More →</a>
       </div>
       <div class="issue">
-        <img src="/images/email-images/issue-image.jpg" class="issue-image">
+        <img src="images/email-images/issue-image.jpg" class="issue-image">
         <div class="issue-title">
           <a class="issue-title-link">Issue 16&#58; Is Wellbeing the New GDP?</a>
         </div>
@@ -137,7 +137,7 @@
         <a href="#" title="read more" class="read-more">Read More →</a>
       </div>
       <div class="issue">
-        <img src="/images/email-images/issue-image.jpg" class="issue-image">
+        <img src="images/email-images/issue-image.jpg" class="issue-image">
         <div class="issue-title">
           <a class="issue-title-link">Issue 15&#58; Human Chatbots</a>
         </div>
@@ -147,7 +147,7 @@
     </div>
     <div class="sub-issues d-flex justify-content-space-between">
       <div class="issue">
-        <img src="/images/email-images/issue-image.jpg" class="issue-image">
+        <img src="images/email-images/issue-image.jpg" class="issue-image">
         <div class="issue-title">
           <a class="issue-title-link">Issue 14&#58; A Fresh Take on Smart Cities</a>
         </div>
@@ -155,7 +155,7 @@
         <a href="#" title="read more" class="read-more">Read More →</a>
       </div>
       <div class="issue">
-        <img src="/images/email-images/issue-image.jpg" class="issue-image">
+        <img src="images/email-images/issue-image.jpg" class="issue-image">
         <div class="issue-title">
           <a class="issue-title-link">Issue 13&#58; Libra is a Wake&#45;Up Call</a>
         </div>
@@ -163,7 +163,7 @@
         <a href="#" title="read more" class="read-more">Read More →</a>
       </div>
       <div class="issue">
-        <img src="/images/email-images/issue-image.jpg" class="issue-image">
+        <img src="images/email-images/issue-image.jpg" class="issue-image">
         <div class="issue-title">
           <a class="issue-title-link">Issue 12&#58; Our Bespoke Future</a>
         </div>
@@ -171,7 +171,7 @@
         <a href="#" title="read more" class="read-more">Read More →</a>
       </div>
       <div class="issue">
-        <img src="/images/email-images/issue-image.jpg" class="issue-image">
+        <img src="images/email-images/issue-image.jpg" class="issue-image">
         <div class="issue-title">
           <a class="issue-title-link">Issue 11&#58; Wellbeing in the Digital Age</a>
         </div>
