--- a/Projects.html
+++ b/Projects.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
     integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
   <link rel="stylesheet" href="/fonts/fontawesome-free-5.10.2-web/css/all.css">
-  <link href="/css/Projects.css" rel="stylesheet">
+  <link href="css/Projects.css" rel="stylesheet">
 </head>
 
 <body>
@@ -17,7 +17,7 @@
     <nav class="navbar navbar-expand-lg">
       <div class="header-logo">
         <a class="navbar-logo-link" href="#">
-          <img src="/images/projects-images/header-logo.png" class="navbar-logo-img">
+          <img src="images/projects-images/header-logo.png" class="navbar-logo-img">
         </a>
       </div>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#myNavbar"
@@ -27,28 +27,28 @@
       <div class="collapse navbar-collapse col-md-6" id="websiteNav">
             <ul class="navbar-nav offset-lg-7" id="navbar">
               <li class="page">
-                <a class="nav-link" href="/Home.html">home</a>
+                <a class="nav-link" href="Home.html">home</a>
               </li>
               <li class="page">
-                <a class="nav-link" href="/Projects.html">projects</a>
+                <a class="nav-link" href="Projects.html">projects</a>
               </li>
               <li class="page">
-                <a class="nav-link" href="/Reports.html">reports</a>
+                <a class="nav-link" href="Reports.html">reports</a>
               </li>
               <li class="page">
-                <a class="nav-link" href="/Articles.html">articles</a>
+                <a class="nav-link" href="Articles.html">articles</a>
               </li>
               <li class="page">
-                <a class="nav-link" href="/Emails.html">emails</a>
+                <a class="nav-link" href="Emails.html">emails</a>
               </li>
               <li class="page">
-                <a class="nav-link" href="/About.html">about</a>
+                <a class="nav-link" href="About.html">about</a>
               </li>
               <li class="page">
-                <a class="nav-link" href="/Contact.html">contact</a>
+                <a class="nav-link" href="Contact.html">contact</a>
               </li>
               <li class="page">
-                <a class="nav-link" href="/index.html">xische&#46;com</a>
+                <a class="nav-link" href="index.html">xische&#46;com</a>
               </li>
             </ul>
           </div>
@@ -57,7 +57,7 @@
   <div class="slide">
     <div class="promotion">
       <video autoplay muted loop class="myVideo">
-        <source src="/images/projects-images/Simple Promotional Video.mp4" type="video/mp4">
+        <source src="images/projects-images/Simple Promotional Video.mp4" type="video/mp4">
       </video>
       <div class="slide-paragraph">
         <h3 class="slide-h3">projects</h3>
@@ -77,7 +77,7 @@
           <h1 class="project-h1">Research&#46; original and curated content for new national GX initiative
           </h1>
           <div class="media">
-            <img src="/images/projects-images/project1-image.png" class="project1-img">
+            <img src="images/projects-images/project1-image.png" class="project1-img">
             <div class="media-body">
               <p class="project-paragraph">The UAE Government required deep industry research and
                 insights in the form of originally authored articles and curated global
@@ -98,7 +98,7 @@
           <h3 class="project-h3"><a href="#" class="project-h3-link">PROJECT &#45; DUBAI MUNICIPALITY</a></h3>
           <h1 class="project-h1">Rethinking Cities of Tomorrow&#58; Human&#45;Centric Approach</h1>
           <div class="media">
-            <img src="/images/projects-images/project2-image.png" class="project1-img">
+            <img src="images/projects-images/project2-image.png" class="project1-img">
             <div class="media-body">
               <p class="project-paragraph">Dubai Municipality tasked Xische Reports to examine historical
                 and modern contexts to predict the shifts and leaders of human&#45;centric urbanism&#46;
@@ -127,13 +127,13 @@
             </h4>
             <div class="partners d-flex justify-content-space-between">
 
-              <a href="https://www.smartdubai.ae/"><img src="/images/home images/partners-image1.png"
+              <a href="https://www.smartdubai.ae/"><img src="images/home images/partners-image1.png"
                   class="partners-img"></a>
-              <a href="#"><img src="/images/home images/partners-image2.png" class="partners-img2"></a>
-              <a href="https://fintechhive.difc.ae/"><img src="/images/home images/partners-image3.png"
+              <a href="#"><img src="images/home images/partners-image2.png" class="partners-img2"></a>
+              <a href="https://fintechhive.difc.ae/"><img src="images/home images/partners-image3.png"
                   class="partners-img"></a>
-              <a href="http://dewa.gov.ae/"><img src="/images/home images/partners-image4.png" class="partners-img"></a>
-              <a href="https://www.arabnet.me/"><img src="/images/home images/partners-image5.png"
+              <a href="http://dewa.gov.ae/"><img src="images/home images/partners-image4.png" class="partners-img"></a>
+              <a href="https://www.arabnet.me/"><img src="images/home images/partners-image5.png"
                   class="partners-img"></a>
             </div>
           </div>
@@ -159,7 +159,7 @@
           <h3>authored articles</h3>
           <div class="collection1 d-flex justify-content-space-between">
             <div class="article1">
-              <img src="/images/projects-images/article-image1.png" class="article-image">
+              <img src="images/projects-images/article-image1.png" class="article-image">
               <div class="label"><a href="#" class="article-label">Government Experience</a></div>
               <div class="heading">
                 <a href="#" class="heading-link">Why email is the hot new trend in service
@@ -171,7 +171,7 @@
               <a href="#" title="read more" class="read-more">Read More →</a>
             </div>
             <div class="article2">
-              <img src="/images/projects-images/article-image2.png" class="article-image">
+              <img src="images/projects-images/article-image2.png" class="article-image">
               <div class="label"><a href="#" class="article-label">Government Experience</a></div>
               <div class="heading">
                 <a href="#" class="heading-link">Public&#45;private partnerships for better service
@@ -185,7 +185,7 @@
           </div>
           <div class="collection2 d-flex justify-content-space-between">
             <div class="article1">
-              <img src="/images/projects-images/article-image3.png" class="article-image">
+              <img src="images/projects-images/article-image3.png" class="article-image">
               <div class="label"><a href="#" class="article-label">Government Experience</a></div>
               <div class="heading">
                 <a href="#" class="heading-link">Is the services sector blockchain&#96;s next
@@ -198,7 +198,7 @@
               <a href="#" title="read more" class="read-more">Read More →</a>
             </div>
             <div class="article2">
-              <img src="/images/projects-images/article-image4.png" class="article-image">
+              <img src="images/projects-images/article-image4.png" class="article-image">
               <div class="label"><a href="#" class="article-label">Government Experience</a></div>
               <div class="heading">
                 <a href="#" class="heading-link">Coming Soon&#58; Hyper&#45;personalized Government</a>
@@ -211,7 +211,7 @@
           </div>
           <div class="collection3 d-flex justify-content-space-between">
             <div class="article1">
-              <img src="/images/projects-images/article-image5.png" class="article-image">
+              <img src="images/projects-images/article-image5.png" class="article-image">
               <div class="label"><a href="#" class="article-label">Government Experience</a></div>
               <div class="heading">
                 <a href="#" class="heading-link">AI and the Future of Government Service</a>
@@ -222,7 +222,7 @@
               <a href="#" title="read more" class="read-more">Read More →</a>
             </div>
             <div class="article2">
-              <img src="/images/projects-images/article-image6.png" class="article-image">
+              <img src="images/projects-images/article-image6.png" class="article-image">
               <div class="label"><a href="#" class="article-label">Government Experience</a></div>
               <div class="heading">
                 <a href="#" class="heading-link">Are government services ready for 5G&#63;</a>
@@ -236,7 +236,7 @@
           </div>
           <div class="collection4 d-flex justify-content-space-between">
             <div class="article1">
-              <img src="/images/projects-images/article-image7.png" class="article-image">
+              <img src="images/projects-images/article-image7.png" class="article-image">
               <div class="label"><a href="#" class="article-label">Government Experience</a></div>
               <div class="heading">
                 <a href="#" class="heading-link">For better service design&#44; turn to the crowd</a>
@@ -247,7 +247,7 @@
               <a href="#" title="read more" class="read-more">Read More →</a>
             </div>
             <div class="article2">
-              <img src="/images/projects-images/article-image8.png" class="article-image">
+              <img src="images/projects-images/article-image8.png" class="article-image">
               <div class="label"><a href="#" class="article-label">Government Experience</a></div>
               <div class="heading">
                 <a href="#" class="heading-link">Analog is the hot new trend in service innovation</a>
@@ -263,7 +263,7 @@
         <div class="chapters-from-report col-lg-5">
           <h3>authored articles</h3>
           <div class="media">
-            <img src="/images/projects-images/chapter-image1.jpg" class="chapter-image mr-3">
+            <img src="images/projects-images/chapter-image1.jpg" class="chapter-image mr-3">
             <div class="media-body">
               <div class="label2"><a href="#" class="chapter-label">Chapter&#45; Urbanism</a></div>
               <div class="heading2">
@@ -275,7 +275,7 @@
             </div>
           </div>
           <div class="media">
-            <img src="/images/projects-images/chapter-image2.jpg" class="chapter-image mr-3">
+            <img src="images/projects-images/chapter-image2.jpg" class="chapter-image mr-3">
             <div class="media-body">
               <div class="label2"><a href="#" class="chapter-label">Chapter&#45; Urbanism</a></div>
               <div class="heading2">
@@ -287,7 +287,7 @@
             </div>
           </div>
           <div class="media">
-            <img src="/images/projects-images/chapter-image3.jpg" class="chapter-image mr-3">
+            <img src="images/projects-images/chapter-image3.jpg" class="chapter-image mr-3">
             <div class="media-body">
               <div class="label2"><a href="#" class="chapter-label">Chapter&#45; Urbanism</a></div>
               <div class="heading2">
@@ -299,7 +299,7 @@
             </div>
           </div>
           <div class="media">
-            <img src="/images/projects-images/chapter-image4.jpg" class="chapter-image mr-3">
+            <img src="images/projects-images/chapter-image4.jpg" class="chapter-image mr-3">
             <div class="media-body">
               <div class="label2"><a href="#" class="chapter-label">Chapter&#45; Urbanism</a></div>
               <div class="heading2">
@@ -311,7 +311,7 @@
             </div>
           </div>
           <div class="media">
-            <img src="/images/projects-images/chapter-image5.jpg" class="chapter-image mr-3">
+            <img src="images/projects-images/chapter-image5.jpg" class="chapter-image mr-3">
             <div class="media-body">
               <div class="label2"><a href="#" class="chapter-label">Chapter&#45; Urbanism</a></div>
               <div class="heading2">
@@ -323,7 +323,7 @@
             </div>
           </div>
           <div class="media">
-            <img src="/images/projects-images/chapter-image6.jpg" class="chapter-image mr-3">
+            <img src="images/projects-images/chapter-image6.jpg" class="chapter-image mr-3">
             <div class="media-body">
               <div class="label2"><a href="#" class="chapter-label">Chapter&#45; Urbanism</a></div>
               <div class="heading2">
@@ -334,7 +334,7 @@
             </div>
           </div>
           <div class="media">
-            <img src="/images/projects-images/chapter-image7.jpg" class="chapter-image mr-3">
+            <img src="images/projects-images/chapter-image7.jpg" class="chapter-image mr-3">
             <div class="media-body">
               <div class="label2"><a href="#" class="chapter-label">Chapter&#45; Urbanism</a></div>
               <div class="heading2">
@@ -346,7 +346,7 @@
             </div>
           </div>
           <div class="media">
-            <img src="/images/projects-images/chapter-image8.jpg" class="chapter-image mr-3">
+            <img src="images/projects-images/chapter-image8.jpg" class="chapter-image mr-3">
             <div class="media-body">
               <div class="label2"><a href="#" class="chapter-label">Chapter&#45; Urbanism</a></div>
               <div class="heading2">
