--- a/Reports.html
+++ b/Reports.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
     integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
   <link rel="stylesheet" href="/fonts/fontawesome-free-5.10.2-web/css/all.css">
-  <link href="/css/Reports.css" rel="stylesheet">
+  <link href="css/Reports.css" rel="stylesheet">
 </head>
 
 <body>
@@ -17,7 +17,7 @@
     <nav class="navbar navbar-expand-lg">
       <div class="header-logo">
         <a class="navbar-logo-link" href="/html/Home.html">
-          <img src="/images/reports-images/header-logo.png" class="navbar-logo-img">
+          <img src="images/reports-images/header-logo.png" class="navbar-logo-img">
         </a>
       </div>
 
@@ -28,28 +28,28 @@
       <div class="collapse navbar-collapse col-md-6" id="websiteNav">
             <ul class="navbar-nav offset-lg-7" id="navbar">
               <li class="page">
-                <a class="nav-link" href="/Home.html">home</a>
+                <a class="nav-link" href="Home.html">home</a>
               </li>
               <li class="page">
-                <a class="nav-link" href="/Projects.html">projects</a>
+                <a class="nav-link" href="Projects.html">projects</a>
               </li>
               <li class="page">
-                <a class="nav-link" href="/Reports.html">reports</a>
+                <a class="nav-link" href="Reports.html">reports</a>
               </li>
               <li class="page">
-                <a class="nav-link" href="/Articles.html">articles</a>
+                <a class="nav-link" href="Articles.html">articles</a>
               </li>
               <li class="page">
-                <a class="nav-link" href="/Emails.html">emails</a>
+                <a class="nav-link" href="Emails.html">emails</a>
               </li>
               <li class="page">
-                <a class="nav-link" href="/About.html">about</a>
+                <a class="nav-link" href="About.html">about</a>
               </li>
               <li class="page">
-                <a class="nav-link" href="/Contact.html">contact</a>
+                <a class="nav-link" href="Contact.html">contact</a>
               </li>
               <li class="page">
-                <a class="nav-link" href="/index.html">xische&#46;com</a>
+                <a class="nav-link" href="index.html">xische&#46;com</a>
               </li>
             </ul>
           </div>
@@ -59,7 +59,7 @@
     <div class="slide d-flex">
       <div class="blockchain flex-1">
         <div class="media">
-          <img src="/images/reports-images/slide-image.png" class="blockchain-image">
+          <img src="images/reports-images/slide-image.png" class="blockchain-image">
           <div class="media-body">
             <h3 class="blockchain-h3">
               <a href="#" class="blockchain-h3-link">state of play</a>
@@ -102,7 +102,7 @@
       <div class="collection1 d-flex justify-content-space-between">
         <div class="report col-lg-6">
           <div class="media">
-            <img src="/images/reports-images/report-image1.png" class="report-image">
+            <img src="images/reports-images/report-image1.png" class="report-image">
             <div class="media-body">
               <h3 class="report-h3">
                 <a href="#" class="report-h3-link">state of play</a>
@@ -120,7 +120,7 @@
         </div>
         <div class="report col-lg-6">
           <div class="media">
-            <img src="/images/reports-images/reports-image2.png" class="report-image">
+            <img src="images/reports-images/reports-image2.png" class="report-image">
             <div class="media-body">
               <h3 class="report-h3">
                 <a href="#" class="report-h3-link">project</a>
@@ -149,7 +149,7 @@
       <div class="collection1 d-flex justify-content-space-between">
         <div class="report col-lg-6">
           <div class="media">
-            <img src="/images/reports-images/report-image3.png" class="report-image">
+            <img src="images/reports-images/report-image3.png" class="report-image">
             <div class="media-body">
               <h3 class="report-h3">
                 <a href="#" class="report-h3-link">state of play</a>
@@ -167,7 +167,7 @@
         </div>
         <div class="report col-lg-6">
           <div class="media">
-            <img src="/images/reports-images/report-image4.png" class="report-image">
+            <img src="images/reports-images/report-image4.png" class="report-image">
             <div class="media-body">
               <h3 class="report-h3">
                 <a href="#" class="report-h3-link">in &#45; depth</a>
@@ -197,7 +197,7 @@
       <div class="collection1 d-flex justify-content-space-between">
         <div class="report col-lg-6">
           <div class="media">
-            <img src="/images/reports-images/report-image5.png" class="report-image">
+            <img src="images/reports-images/report-image5.png" class="report-image">
             <div class="media-body">
               <h3 class="report-h3">
                 <a href="#" class="report-h3-link">insights</a>
@@ -214,7 +214,7 @@
         </div>
         <div class="report col-lg-6">
           <div class="media">
-            <img src="/images/reports-images/report-image6.png" class="report-image">
+            <img src="images/reports-images/report-image6.png" class="report-image">
             <div class="media-body">
               <h3 class="report-h3">
                 <a href="#" class="report-h3-link">in &#45; depth</a>
@@ -241,7 +241,7 @@
       </div>
       <div class="report col-lg-6">
         <div class="media">
-          <img src="/images/reports-images/report-image7.png" class="report-image">
+          <img src="images/reports-images/report-image7.png" class="report-image">
           <div class="media-body">
             <h3 class="report-h3">
               <a href="#" class="report-h3-link">navigator</a>
@@ -266,7 +266,7 @@
     <div class="report-excerpts">
       <div class="chapters-collection1 d-flex justify-content-space-between">
         <div class="ex1">
-          <div class="ex-image-container"><img src="/images/reports-images/chapter-image1.jpg" class="chapter-image">
+          <div class="ex-image-container"><img src="images/reports-images/chapter-image1.jpg" class="chapter-image">
           </div>
           <div class="ex-label">Chapters&#44; Urbanism</div>
           <div class="ex-title-div"><a class="ex-title">Why Here&#44; Why Now</a></div>
@@ -276,7 +276,7 @@
           <a href="#" title="read more" class="read-more">Read More →</a>
         </div>
         <div class="ex1">
-          <div class="ex-image-container"><img src="/images/reports-images/chapter-image2.jpg" class="chapter-image">
+          <div class="ex-image-container"><img src="images/reports-images/chapter-image2.jpg" class="chapter-image">
           </div>
           <div class="ex-label">Chapters&#44; Urbanism</div>
           <div class="ex-title-div"><a class="ex-title">Old Challenges&#44; New Approaches</a></div>
@@ -285,7 +285,7 @@
           <a href="#" title="read more" class="read-more">Read More →</a>
         </div>
         <div class="ex1">
-          <div class="ex-image-container"><img src="/images/reports-images/chapter-image3.jpg" class="chapter-image">
+          <div class="ex-image-container"><img src="images/reports-images/chapter-image3.jpg" class="chapter-image">
           </div>
           <div class="ex-label">Chapters&#44; Urbanism</div>
           <div class="ex-title-div"><a class="ex-title">While the happiness of residents wasn&#39;t</a></div>
@@ -294,7 +294,7 @@
           <a href="#" title="read more" class="read-more">Read More →</a>
         </div>
         <div class="ex1">
-          <div class="ex-image-container"><img src="/images/reports-images/chapter-image4.jpg" class="chapter-image">
+          <div class="ex-image-container"><img src="images/reports-images/chapter-image4.jpg" class="chapter-image">
           </div>
           <div class="ex-label">Chapters&#44; Urbanism</div>
           <div class="ex-title-div"><a class="ex-title">In Focus&#58; Nordic Model</a></div>
@@ -304,7 +304,7 @@
           <a href="#" title="read more" class="read-more">Read More →</a>
         </div>
         <div class="ex1">
-          <div class="ex-image-container"><img src="/images/reports-images/chapter-image5.jpg" class="chapter-image">
+          <div class="ex-image-container"><img src="images/reports-images/chapter-image5.jpg" class="chapter-image">
           </div>
           <div class="ex-label">Chapters&#44; Urbanism</div>
           <div class="ex-title-div"><a class="ex-title">In Focus&#58; Nordic Model</a></div>
@@ -316,7 +316,7 @@
       </div>
       <div class="chapters-collection2 d-flex justify-content-space-between">
         <div class="ex2">
-          <div class="ex-image-container"><img src="/images/reports-images/chapter-image6.jpg" class="chapter-image">
+          <div class="ex-image-container"><img src="images/reports-images/chapter-image6.jpg" class="chapter-image">
           </div>
           <div class="ex-label">Chapters&#44; Urbanism</div>
           <div class="ex-title-div"><a class="ex-title">Rise of Technology</a></div>
@@ -325,7 +325,7 @@
           <a href="#" title="read more" class="read-more">Read More →</a>
         </div>
         <div class="ex2">
-          <div class="ex-image-container"><img src="/images/reports-images/chapter-image7.jpg" class="chapter-image">
+          <div class="ex-image-container"><img src="images/reports-images/chapter-image7.jpg" class="chapter-image">
           </div>
           <div class="ex-label">Chapters&#44; Urbanism</div>
           <div class="ex-title-div"><a class="ex-title">Impact on Wellbeing</a></div>
@@ -335,7 +335,7 @@
           <a href="#" title="read more" class="read-more">Read More →</a>
         </div>
         <div class="ex2">
-          <div class="ex-image-container"><img src="/images/reports-images/chapter-image8.jpg" class="chapter-image">
+          <div class="ex-image-container"><img src="images/reports-images/chapter-image8.jpg" class="chapter-image">
           </div>
           <div class="ex-label">Chapters&#44; Urbanism</div>
           <div class="ex-title-div"><a class="ex-title">Human&#45;Centric Paradigm</a></div>
@@ -344,7 +344,7 @@
           <a href="#" title="read more" class="read-more">Read More →</a>
         </div>
         <div class="ex2">
-          <div class="ex-image-container"><img src="/images/reports-images/chapter-image9.jpg" class="chapter-image">
+          <div class="ex-image-container"><img src="images/reports-images/chapter-image9.jpg" class="chapter-image">
           </div>
           <div class="ex-label">Chapters&#44; Urbanism</div>
           <div class="ex-title-div"><a class="ex-title">Communities for Lifelong Wellbeing</a></div>
@@ -354,7 +354,7 @@
           <a href="#" title="read more" class="read-more">Read More →</a>
         </div>
         <div class="ex2">
-          <div class="ex-image-container"><img src="/images/reports-images/chapter-image10 (1).jpg"
+          <div class="ex-image-container"><img src="images/reports-images/chapter-image10 (1).jpg"
               class="chapter-image"></div>
           <div class="ex-label">Chapters&#44; Urbanism</div>
           <div class="ex-title-div"><a class="ex-title">Designing Quality of Life</a></div>
@@ -365,7 +365,7 @@
       </div>
       <div class="chapters-collection3 d-flex justify-content-space-between">
         <div class="ex3">
-          <div class="ex-image-container"><img src="/images/reports-images/chapter-image11.jpg" class="chapter-image">
+          <div class="ex-image-container"><img src="images/reports-images/chapter-image11.jpg" class="chapter-image">
           </div>
           <div class="ex-label">Chapters&#44; Urbanism</div>
           <div class="ex-title-div"><a class="ex-title">Technology as Invisible Force</a></div>
@@ -374,7 +374,7 @@
           <a href="#" title="read more" class="read-more">Read More →</a>
         </div>
         <div class="ex3">
-          <div class="ex-image-container"><img src="/images/reports-images/chapter-image12.jpg" class="chapter-image">
+          <div class="ex-image-container"><img src="images/reports-images/chapter-image12.jpg" class="chapter-image">
           </div>
           <div class="ex-label">Chapters&#44; Urbanism</div>
           <div class="ex-title-div"><a class="ex-title">Future of Human&#45;Centric Cities</a></div>
@@ -383,7 +383,7 @@
           <a href="#" title="read more" class="read-more">Read More →</a>
         </div>
         <div class="ex3">
-          <div class="ex-image-container"><img src="/images/reports-images/chapter-image13.jpg" class="chapter-image">
+          <div class="ex-image-container"><img src="images/reports-images/chapter-image13.jpg" class="chapter-image">
           </div>
           <div class="ex-label">Chapters&#44; Urbanism</div>
           <div class="ex-title-div"><a class="ex-title">Effective Governance</a></div>
@@ -392,7 +392,7 @@
           <a href="#" title="read more" class="read-more">Read More →</a>
         </div>
         <div class="ex3">
-          <div class="ex-image-container"><img src="/images/reports-images/chapter-image14.jpg" class="chapter-image">
+          <div class="ex-image-container"><img src="images/reports-images/chapter-image14.jpg" class="chapter-image">
           </div>
           <div class="ex-label">Chapters&#44; Urbanism</div>
           <div class="ex-title-div"><a class="ex-title">Interdisciplinary Design</a></div>
@@ -401,7 +401,7 @@
           <a href="#" title="read more" class="read-more">Read More →</a>
         </div>
         <div class="ex3">
-          <div class="ex-image-container"><img src="/images/reports-images/chapter-image15.jpg" class="chapter-image">
+          <div class="ex-image-container"><img src="images/reports-images/chapter-image15.jpg" class="chapter-image">
           </div>
           <div class="ex-label">Chapters&#44; Urbanism</div>
           <div class="ex-title-div"><a class="ex-title">In Focus&#58; Urbanism in Dubai</a></div>
