--- a/Articles.html
+++ b/Articles.html
@@ -6,8 +6,7 @@
   <meta http-equiv="x-ua-cmpatible" content="ie=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Xische Reports-Research on Culture,Innovation & The Future.Made in Dubai</title>
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3css/bootstrap.min.css"
-    integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
   <link rel="stylesheet" href="/fonts/fontawesome-free-5.10.2-web/css/all.css">
   <link href="css/Articles.css" rel="stylesheet">
 </head>
