I've fixed the Home Page header

--- a/Home.html
+++ b/Home.html
@@ -16,18 +16,18 @@
 
 <body>
   <div class="main-header">
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-      <div class="container">
-        <div class="row">
-          <a class="navbar-brand" href="/html/Home.html">
-            <img src="images/home-images/Xische-logo.png" class="header-logo" alt="xische.com">
-          </a>
-          <button class="navbar-toggler  offset-md-5" type="button" data-toggle="collapse" data-target="#websiteNav"
-            aria-controls="websiteNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse col-md-6" id="websiteNav">
-            <ul class="navbar-nav offset-lg-7" id="navbar">
+    <nav class="navbar navbar-expand-lg">
+      <div class="header-logo">
+        <a class="navbar-logo-link" href="/html/Home.html">
+          <img src="images/reports-images/header-logo.png" class="navbar-logo-img">
+        </a>
+      </div>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#myNavBar"
+        aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse col-md-6" id="websiteNav">
+            <ul class="navbar-nav offset-lg-6" id="navbar">
               <li class="page">
                 <a class="nav-link" href="Home.html">home</a>
               </li>
@@ -54,13 +54,11 @@
               </li>
             </ul>
           </div>
-        </div>
-      </div>
     </nav>
     <div class="slide" id="slider">
       <div class="container">
         <div class="row">
-          <div class="slide-sentence text-center offset-lg-4">
+          <div class="slide-sentence text-center offset-lg-3">
             <h2 class="offset-xs-2 offset-md-2">We investigate change across culture&#44; innovation and the future</h2>
           </div>
           <i class="fa fa-angle-down fa-4x offset-6 hidden-xs" id="icon" onclick="iconScrollToDiv(480)"></i>
