tried to change color in index.html file

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-  <div class="wrapper">
+  <div class="wrapper" id="main-slide">
     <div class="slide1">
       <h1 class="h1">Xische is now a collective&#46;</h1>
       <p class="text">where are you going next&#63;</p>
